Reach recall@10=0.40 in the training set and validation set, but is poor in the testing set.
1. Update .gitignore for the best-saved model.
2. Assigned `ascii` as true for the windows.
3. Implement a function for random shuffling options and labels.
4. Simply concatenate them into a single sequence instead of using the last one utterance.
5. Enable shuffling for the training set and validation set, and the sample rate is 1:9 in the training set.
6. Implement a GRU with softmax for the baseline model.
7. Modified the `predict.py` for the best-saved model.
8. Using NLTK for the tokenization and `sentence to indices`.
9. Modified the `train.py` for adding a saving best only callback.

--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,6 @@ venv.bak/
 hw1/data/*.json
 hw1/data/*.vec
 hw1/data/*.pkl
-hw1/models/*/*.pkl.*
+hw1/models/*/*.pkl*
 hw1/models/*/*.csv
 hw1/models/*/log.json
