--- a/hw1/data/config.json
+++ b/hw1/data/config.json
@@ -2,5 +2,5 @@
     "train_json_path": "../data/train.json",
     "valid_json_path": "../data/valid.json",
     "test_json_path": "../data/test.json",
-    "embedding_vec_path": "../data/crawl-300d-2M.vec"
+    "embedding_vec_path": "../data/w2v"
 }
