--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ hw1/data/w2v
 hw1/data/w2v.pkl
 hw1/data/w2v.*.npy
 hw1/models/*/*.pkl.*
+hw1/models/emb*/*.pkl
 hw1/models/*/*.csv
 hw1/ensemble/csv/*
 hw1/ensemble/*.csv
