--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,13 @@ hw1/data/corpus.txt
 hw1/data/w2v
 hw1/data/w2v.pkl
 hw1/data/w2v.*.npy
-hw1/models/*/*.pkl*
+hw1/models/*/*.pkl.*
 hw1/models/*/*.csv
-hw1/models/*/log.json
+hw1/ensemble/csv/*
+hw1/ensemble/*.csv
+
+# hw2
+hw2/data/GloVe/*
+hw2/data/language_model/*
+hw2/dataset/classification/*
+hw2/model/*
