--- a/hw2/bcn_model_config_template.yaml
+++ b/hw2/bcn_model_config_template.yaml
@@ -15,6 +15,7 @@ net:
 use_elmo: false
 elmo_embedder:
   # Set the value of ``ELMo.embedder`` init parameters here.
+  n_ctx_embs: 0  # The number of the contextualized embedding, required.
   ctx_emb_dim: 0  # The dimension of the contextualized embedding, required.
 optim:
   algo: 'Adam'
