--- a/hw2/bcn_model_config_template.yaml
+++ b/hw2/bcn_model_config_template.yaml
@@ -7,7 +7,7 @@ data_loader:
   max_sent_len: 64
   max_word_len: 16
   batch_size: 32
-  n_workers: 4
+  n_workers: 1
 net:
   char_conv_kernel_size: 3
   d_model: 128
@@ -15,6 +15,7 @@ net:
 use_elmo: false
 elmo_embedder:
   # Set the value of ``ELMo.embedder`` init parameters here.
+  n_ctx_embs: 0  # The number of the contextualized embedding, required.
   ctx_emb_dim: 0  # The dimension of the contextualized embedding, required.
 optim:
   algo: 'Adam'
