Use flair embeddings
1. Remove the duplicated line for log.csv.
2. Update .gitignore for model config.
3. Use flair embeddings.

--- a/.gitignore
+++ b/.gitignore
@@ -120,5 +120,7 @@ hw1/ensemble/*.csv
 hw2/data/GloVe/*
 hw2/data/language_model/*
 hw2/dataset/classification/*
-hw2/model/*
+hw2/model/*/ckpts/*
+hw2/model/*/predictions/*
+hw2/model/*/log.csv
 hw2/ELMo/output/*
