Create training progress GIFs for both architectures.

--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,6 @@ hw4/FID_evaluation/*.tar.gz
 hw4/FID_evaluation/*.npy
 hw4/selected_cartoonset100k/images/*
 hw4/eval_images/*.png
+hw4/eval_images/*/*.png
+hw4/eval_images/*/*.png
 hw4/sample_test/*/*.png
